[gd_scene load_steps=6 format=3 uid="uid://dpk7dwwpywpl7"]

[ext_resource type="Script" path="res://Levels/MainMenu.gd" id="1_powae"]
[ext_resource type="Texture2D" uid="uid://b22i4d1ye60mg" path="res://Levels/sprites/bg2.png" id="2_qeacb"]
[ext_resource type="Texture2D" uid="uid://4kum5w36iqb4" path="res://Sprites/paste.png" id="3_yrjn6"]
[ext_resource type="AudioStream" uid="uid://cv1gxmj7tmcp6" path="res://Audio/City Park Ambience.mp3" id="5_q5a0m"]

[sub_resource type="LabelSettings" id="LabelSettings_mqvfu"]
line_spacing = -12.0
font_size = 50

[node name="MainMenu" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 3
size_flags_vertical = 3
script = ExtResource("1_powae")

[node name="TextureRect" type="TextureRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("2_qeacb")

[node name="Title" type="Label" parent="."]
layout_mode = 2
offset_left = 49.0
offset_top = 46.0
offset_right = 315.0
offset_bottom = 158.0
text = "Smoothie
Maker Pro"
label_settings = SubResource("LabelSettings_mqvfu")
horizontal_alignment = 1

[node name="HBoxContainer" type="HBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="VBoxContainer" type="VBoxContainer" parent="HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 4
theme_override_constants/separation = 20

[node name="TextureRect2" type="TextureRect" parent="HBoxContainer/VBoxContainer"]
visible = false
self_modulate = Color(1, 1, 1, 0.592157)
custom_minimum_size = Vector2(0, 195.89)
layout_mode = 2
texture = ExtResource("3_yrjn6")
expand_mode = 1

[node name="MarginContainer" type="MarginContainer" parent="HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3

[node name="VBoxContainer2" type="VBoxContainer" parent="HBoxContainer/MarginContainer"]
layout_mode = 2
size_flags_vertical = 4
theme_override_constants/separation = 25

[node name="StartButton" type="Button" parent="HBoxContainer/MarginContainer/VBoxContainer2"]
layout_mode = 2
text = "Start"

[node name="OptionsButton" type="Button" parent="HBoxContainer/MarginContainer/VBoxContainer2"]
layout_mode = 2
text = "Options"

[node name="LeaderboardButton" type="Button" parent="HBoxContainer/MarginContainer/VBoxContainer2"]
layout_mode = 2
text = "Leaderboard"

[node name="CreditsButton" type="Button" parent="HBoxContainer/MarginContainer/VBoxContainer2"]
layout_mode = 2
text = "Credits"

[node name="QuitButton" type="Button" parent="HBoxContainer/MarginContainer/VBoxContainer2"]
layout_mode = 2
text = "Quit"

[node name="AudioStreamPlayer" type="AudioStreamPlayer" parent="."]
stream = ExtResource("5_q5a0m")
autoplay = true
bus = &"music"

[connection signal="button_down" from="HBoxContainer/MarginContainer/VBoxContainer2/StartButton" to="." method="_on_start_button_button_down"]
[connection signal="button_down" from="HBoxContainer/MarginContainer/VBoxContainer2/OptionsButton" to="." method="_on_options_button_button_down"]
[connection signal="button_down" from="HBoxContainer/MarginContainer/VBoxContainer2/LeaderboardButton" to="." method="_on_leaderboard_button_button_down"]
[connection signal="button_down" from="HBoxContainer/MarginContainer/VBoxContainer2/CreditsButton" to="." method="_on_credits_button_button_down"]
[connection signal="pressed" from="HBoxContainer/MarginContainer/VBoxContainer2/QuitButton" to="." method="_on_quit_button_pressed"]
